--- a/angularjs-spring-boot-main/src/main/resources/application.properties
+++ b/angularjs-spring-boot-main/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://projectdatabase.cnhtiuwlkf49.us-east-1.rds.amazonaws.com/projectdatabase
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.username=root
+spring.datasource.password=password
 server.port=5000
