--- a/angularjs-spring-boot-main/src/main/resources/application.properties
+++ b/angularjs-spring-boot-main/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://projectdatabase.cnhtiuwlkf49.us-east-1.rds.amazonaws.com/projectdatabase
-#spring.jpa.hibernate.ddl-auto = create
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=password
 #server.port=5000
