--- a/angularjs-spring-boot-main/src/main/resources/application.properties
+++ b/angularjs-spring-boot-main/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-server.port=5000
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/testdatabase
+spring.datasource.url=jdbc:mysql://projectdatabase.cnhtiuwlkf49.us-east-1.rds.amazonaws.com/projectdatabase
+spring.datasource.username=root
+spring.datasource.password=password
+#server.port=5000
