--- a/angularjs-spring-boot-main/src/main/resources/application.properties
+++ b/angularjs-spring-boot-main/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=5000
+
+#
+spring.jpa.hibernate.ddl-auto=update
+# Here 'test' is the database name
+#spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ecommercebackend
+spring.datasource.username=root
+spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
