--- a/angularjs-spring-boot-main/src/main/resources/application.properties
+++ b/angularjs-spring-boot-main/src/main/resources/application.properties
@@ -1,12 +1,28 @@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/testdatabase
-spring.datasource.url=jdbc:mysql://projectdatabase.cnhtiuwlkf49.us-east-1.rds.amazonaws.com/projectdatabase
+##################################### alvin
+##spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.show-sql=true
+##spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto = update
+##spring.jpa.hibernate.ddl-auto=update
+##spring.datasource.url=jdbc:mysql://localhost:3306/testdatabase
+#spring.datasource.url=jdbc:mysql://projectdatabase.cnhtiuwlkf49.us-east-1.rds.amazonaws.com/projectdatabase
+#spring.datasource.username=root
+#spring.datasource.password=password
+##server.port=5000
+
+####################################### krish
+server.port=5000
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ecommercebackend #this is local db 
+#spring.datasource.url=jdbc:mysql://awseb-e-nxeq24dvm7-stack-awsebrdsdatabase-sphhcmon80ny.chb2wdknopq4.us-east-1.rds.amazonaws.com:3306/ebdb
 spring.datasource.username=root
 spring.datasource.password=password
-#server.port=5000
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
