Orders working but need to decrease items
need to also fix date

--- a/angularjs-spring-boot-main/src/main/resources/application.properties
+++ b/angularjs-spring-boot-main/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.port=5000
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ecommercebackend #this is local db 
 #spring.datasource.url=jdbc:mysql://awseb-e-nxeq24dvm7-stack-awsebrdsdatabase-sphhcmon80ny.chb2wdknopq4.us-east-1.rds.amazonaws.com:3306/ebdb
